--- a/aboutPPC_page1.html
+++ b/aboutPPC_page1.html
@@ -2,6 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta
+      name="google"
+      value="notranslate" />
+    <meta
+      name="google"
+      value="notranslate" />
     <title>Pingtung Peace Church 70</title>
     <meta
       name="viewport"
@@ -162,7 +168,7 @@
             data-aos="zoom-in-up">
             沒有強本的外展，是虛的外展！<br />
             沒有外展的強本，是假的強本！<br />
-            因此，屏東和平教會致力於建造穩固、扎實、強盛的真理根基。<br /><br />幫助弟兄姐妹愛慕純正的道、<br />有內容、能供應生命、活出小基督、彰顯大基督。
+            因此，屏東和平教會致力於建造穩固、扎實、強盛的真理根基。<br /><br />幫助弟兄姐妹愛慕純正的道、成為有內容、<br />能供應生命、活出小基督、彰顯大基督。
             <br />
             <br />
             而「外展檢驗強本」，當我們接受門徒訓練、裝備操練以後，也要奉差遣在各處傳揚基督、外展佈道、做主的見證人！
@@ -172,6 +178,7 @@
           class="span4"
           data-aos="zoom-in-left">
           <img
+            style="margin-left: 0.5rem"
             src="assets/image/ch1/A_109995.jpg"
             class="img-fluid" />
         </div>
@@ -206,14 +213,15 @@
             class="text-secondary"
             data-aos="zoom-in-up">
             神呼召和平教會要成為「新世代使徒育成中心」，不斷裝備訓練、育成興起
-            一代又一代的新世代使徒領袖，兩三個、兩三個的把人差遣出去，走遍城市的各個地方，經營禾場，門徒萬民，直到地極！
+            一代又一代的新世代使徒領袖，兩三個、兩三個地把人差遣出去，走遍城市的各個地方，經營禾場，門徒萬民，直到地極！
           </p>
         </div>
         <div
-          class="span4"
+          class="span4 pt-5"
+          style="margin-left: 1rem"
           data-aos="zoom-in-left">
           <img
-            src="assets/image/ch1/A_109537.jpg"
+            src="assets/image/ch1/img1.png"
             class="img-fluid" />
         </div>
       </div>
@@ -245,7 +253,7 @@
             <p class="pt-3">-Connection-</p>
             <p class="">經營團契（關係）、成為上帝的家人</p>
             <!-- row5 -->
-            <p class="pt-3">-Emliowerment-</p>
+            <p class="pt-3">-Empowerment-</p>
             <p class="">經營事工（團隊）、成為貴重的器皿</p>
             <!--  -->
           </ul>
