--- a/aboutPPC_page2.html
+++ b/aboutPPC_page2.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta
+      name="google"
+      value="notranslate" />
     <title>Pingtung Peace Church 70</title>
     <meta
       name="viewport"
@@ -136,7 +139,7 @@
         </div>
         <div data-aos="zoom-in-up">
           <h2 class="lead text-secondary px-vw-9">
-            「和平教會2.0」的建造，就是一個使徒性教會的建造，是教會中的每一個都要被裝備齊全，能明白使命，
+            「和平教會2.0」的建造，就是一個使徒性教會的建造，是教會中的每一個人都要被裝備齊全，能明白使命，
             並奉差前往家庭、校園、職場、社區、新媒體…各個領域，完成大使命！
             為此，和平教會致力於建造「更小的教會」、「團隊的教會」、「體驗的教會」、「多元的教會」、「未來的教會」，
             這是一個扎實建造合神心意教會的關鍵計畫，更是預備迎向未來、迎接「主再來日子」的異象使命！
@@ -182,6 +185,11 @@
                   <li>
                     <img
                       src="assets/image/ch1-2/small/img_1.jpg"
+                      alt="" />
+                  </li>
+                  <li>
+                    <img
+                      src="assets/image/ch1-2/small/img_6.png"
                       alt="" />
                   </li>
                   <li>
