--- a/aboutPPC_page3.html
+++ b/aboutPPC_page3.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta
+      name="google"
+      value="notranslate" />
     <title>Pingtung Peace Church 70</title>
     <meta
       name="viewport"
@@ -444,26 +447,6 @@
             data-imgUrl="assets/image/ch1-3/img/img_1.jpg"></div>
           <div
             class="team_component"
-            data-title="高培倫"
-            data-description="執事"
-            data-imgUrl="assets/image/ch1-3/img/img_2.jpg"></div>
-          <div
-            class="team_component"
-            data-title="林冠嫣"
-            data-description="長老"
-            data-imgUrl="assets/image/ch1-3/img/img_3.jpg"></div>
-          <div
-            class="team_component"
-            data-title="陳亭媛"
-            data-description="執事"
-            data-imgUrl="assets/image/ch1-3/img/img_4.jpg"></div>
-          <div
-            class="team_component"
-            data-title="劉麗君"
-            data-description="執事"
-            data-imgUrl="assets/image/ch1-3/img/img_5.jpg"></div>
-          <div
-            class="team_component"
             data-title="唐月裡"
             data-description="長老"
             data-imgUrl="assets/image/ch1-3/img/img_6.jpg"></div>
@@ -474,6 +457,32 @@
             data-imgUrl="assets/image/ch1-3/img/img_7.jpg"></div>
           <div
             class="team_component"
+            data-title="楊勝雄"
+            data-description="長老"
+            data-imgUrl="assets/image/ch1-3/img/img_10.jpg"></div>
+          <div
+            class="team_component"
+            data-title="林冠嫣"
+            data-description="長老"
+            data-imgUrl="assets/image/ch1-3/img/img_3.jpg"></div>
+          <div
+            class="team_component"
+            data-title="高培倫"
+            data-description="執事"
+            data-imgUrl="assets/image/ch1-3/img/img_2.jpg"></div>
+          <div
+            class="team_component"
+            data-title="陳亭媛"
+            data-description="執事"
+            data-imgUrl="assets/image/ch1-3/img/img_4.jpg"></div>
+          <div
+            class="team_component"
+            data-title="劉麗君"
+            data-description="執事"
+            data-imgUrl="assets/image/ch1-3/img/img_5.jpg"></div>
+
+          <div
+            class="team_component"
             data-title="黃瑞文"
             data-description="執事"
             data-imgUrl="assets/image/ch1-3/img/img_8.jpg"></div>
@@ -482,11 +491,7 @@
             data-title="蔣佩玲"
             data-description="執事"
             data-imgUrl="assets/image/ch1-3/img/img_9.jpg"></div>
-          <div
-            class="team_component"
-            data-title="楊勝雄"
-            data-description="長老"
-            data-imgUrl="assets/image/ch1-3/img/img_10.jpg"></div>
+
           <div
             class="team_component"
             data-title="黃林翔"
