--- a/aboutPPC_page4.html
+++ b/aboutPPC_page4.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta
+      name="google"
+      value="notranslate" />
     <title>Pingtung Peace Church 70</title>
     <meta
       name="viewport"
@@ -213,7 +216,7 @@
       <div class="span6">
         <img
           style="padding-bottom: 2rem"
-          src="assets/image/ch1-3/img_work/empty.png"
+          src="assets/image/ch1-3/team/service2.jpg"
           class="img-fluid" />
       </div>
       <div class="span6">
@@ -240,7 +243,7 @@
       <div class="span6">
         <img
           style="padding-bottom: 2rem"
-          src="assets/image/ch1-3/img_work/empty.png"
+          src="assets/image/ch1-3/team/safe.jpg"
           class="img-fluid" />
       </div>
       <div class="span6">
@@ -266,7 +269,7 @@
       <div class="span6">
         <img
           style="padding-bottom: 2rem"
-          src="assets/image/ch1-3/img_work/empty.png"
+          src="assets/image/ch1-3/team/pray2.jpeg"
           class="img-fluid" />
       </div>
       <div class="span6">
@@ -290,7 +293,7 @@
       <div class="span6">
         <img
           style="padding-bottom: 2rem"
-          src="assets/image/ch1-3/img_work/empty.png"
+          src="assets/image/ch1-3/team/sound2.jpg"
           class="img-fluid" />
       </div>
       <div class="span6">
@@ -314,7 +317,7 @@
       <div class="span6">
         <img
           style="padding-bottom: 2rem"
-          src="assets/image/ch1-3/img_work/empty.png"
+          src="assets/image/ch1-3/team/media2.jpg"
           class="img-fluid" />
       </div>
       <div class="span6">
@@ -339,7 +342,7 @@
       <div class="span6">
         <img
           style="padding-bottom: 2rem"
-          src="assets/image/ch1-3/img_work/empty.png"
+          src="assets/image/ch1-3/team/worship.jpg"
           class="img-fluid" />
       </div>
       <div class="span6">
@@ -368,7 +371,7 @@
       <div class="span6">
         <img
           style="padding-bottom: 2rem"
-          src="assets/image/ch1-3/img_work/empty.png"
+          src="assets/image/ch1-3/team/outside1.jpg"
           class="img-fluid" />
       </div>
       <div class="span6">
@@ -394,7 +397,7 @@
       <div class="span6">
         <img
           style="padding-bottom: 2rem"
-          src="assets/image/ch1-3/img_work/empty.png"
+          src="assets/image/ch1-3/team/report2.jpeg"
           class="img-fluid" />
       </div>
       <div class="span6">
@@ -418,7 +421,7 @@
       <div class="span6">
         <img
           style="padding-bottom: 2rem"
-          src="assets/image/ch1-3/img_work/empty.png"
+          src="assets/image/ch1-3/team/TV.jpg"
           class="img-fluid" />
       </div>
       <div class="span6">
@@ -442,7 +445,7 @@
       <div class="span6">
         <img
           style="padding-bottom: 2rem"
-          src="assets/image/ch1-3/img_work/empty.png"
+          src="assets/image/ch1-3/team/news2.jpg"
           class="img-fluid" />
       </div>
       <div class="span6">
@@ -468,7 +471,7 @@
       <div class="span6">
         <img
           style="padding-bottom: 2rem"
-          src="assets/image/ch1-3/img_work/empty.png"
+          src="assets/image/ch1-3/team/newMedia2.jpg"
           class="img-fluid" />
       </div>
       <div class="span6">
@@ -492,7 +495,7 @@
       <div class="span6">
         <img
           style="padding-bottom: 2rem"
-          src="assets/image/ch1-3/img_work/empty.png"
+          src="assets/image/ch1-3/team/place.jpg"
           class="img-fluid" />
       </div>
       <div class="span6">
@@ -516,7 +519,7 @@
       <div class="span6">
         <img
           style="padding-bottom: 2rem"
-          src="assets/image/ch1-3/img_work/empty.png"
+          src="assets/image/ch1-3/team/agape 1.jpg"
           class="img-fluid" />
       </div>
       <div class="span6">
@@ -541,7 +544,7 @@
       <div class="span6">
         <img
           style="padding-bottom: 2rem"
-          src="assets/image/ch1-3/img_work/empty.png"
+          src="assets/image/ch1-3/team/soicalService1.jpg"
           class="img-fluid" />
       </div>
       <div class="span6">
