--- a/ppcCulture.html
+++ b/ppcCulture.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta
+      name="google"
+      value="notranslate" />
     <title>Pingtung Peace Church 70</title>
     <meta
       name="viewport"
@@ -163,13 +166,13 @@
                   data-title="杰尼兒事務所"
                   data-description="YQ Junior"
                   data-linkurl="ppcCulture_5.html"
-                  data-imgurl="assets/image/ch3/img_9.jpeg"></div>
+                  data-imgurl="assets/image/ch3/img_8.jpeg"></div>
                 <div
                   class="columnFour_component"
                   data-title="希尼爾事務所"
                   data-description="YQ SENIOR"
                   data-linkurl="ppcCulture_6.html"
-                  data-imgurl="assets/image/ch3/img_8.jpeg"></div>
+                  data-imgurl="assets/image/ch3/img_9.jpeg"></div>
                 <div
                   class="columnFour_component"
                   data-title="大大集散地"
