--- a/ppcTenYears_3.html
+++ b/ppcTenYears_3.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta
+      name="google"
+      value="notranslate" />
     <title>Pingtung Peace Church 70</title>
     <meta
       name="viewport"
@@ -219,6 +222,21 @@
             class="boxportfolio4"
             data-aos="zoom-in-up">
             <div class="testimonial">
+              <!-- <p style="color: palevioletred">Youth Quake<br />希尼爾事務所</p> -->
+              <img
+                style="width: 50%"
+                src="assets/image/logo/YQ_001.png"
+                alt="image" />
+            </div>
+            <div class="author-wrapper">
+              <div class="arrow"></div>
+              <div class="testimonial-name"><br /><span>Youth Quake | 國高中生 </span></div>
+            </div>
+          </div>
+          <div
+            class="boxportfolio4"
+            data-aos="zoom-in-up">
+            <div class="testimonial">
               <!-- <p style="color: palevioletred">Youth Quake<br />杰尼兒事務所</p> -->
               <img
                 style="width: 50%"
@@ -227,9 +245,7 @@
             </div>
             <div class="author-wrapper">
               <div class="arrow"></div>
-              <div class="testimonial-name">
-                <br /><span>Youth Quake 杰尼兒事務所 | 國中生</span>
-              </div>
+              <div class="testimonial-name"><br /><span>杰尼兒事務所 | 國中生</span></div>
             </div>
           </div>
           <div
@@ -244,9 +260,7 @@
             </div>
             <div class="author-wrapper">
               <div class="arrow"></div>
-              <div class="testimonial-name">
-                <br /><span>Youth Quake 希尼爾事務所 | 高中生</span>
-              </div>
+              <div class="testimonial-name"><br /><span>希尼爾事務所 | 高中生</span></div>
             </div>
           </div>
           <div
