--- a/ppcTenYears_6.html
+++ b/ppcTenYears_6.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta
+      name="google"
+      value="notranslate" />
     <title>Pingtung Peace Church 70</title>
     <meta
       name="viewport"
@@ -81,7 +84,7 @@
         width: 50px;
         height: 50px;
       }
-      
+
       body {
         background-image: url("assets/design/img5.png");
         background-size: cover;
