--- a/song_10.html
+++ b/song_10.html
@@ -204,14 +204,19 @@
                   <i class="icon-chevron-left"> &nbsp;回詩歌創作</i>
                 </a>
               </div>
-              <div style="width: 100%; height: 0; position: relative; padding-bottom: 56.25%">
-                <iframe
-                  src="https://www.youtube.com/embed/0sYHNrx6tOw"
-                  title="YouTube video player"
-                  frameborder="0"
-                  style="position: absolute; top: 0; left: 0; width: 100%; height: 100%"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                  allowfullscreen></iframe>
+              <div
+                style="
+                  width: 100%;
+                  height: 0;
+                  position: relative;
+                  padding-bottom: 56.25%;
+                  padding-top: 5rem;
+                ">
+                <audio controls>
+                  <source
+                    src="assets/Follow.wav"
+                    type="audio/mpeg" />
+                </audio>
               </div>
             </div>
             <div
@@ -222,28 +227,80 @@
                   <div class="content-column">
                     <div class="inner-column">
                       <div class="sec-title">
-                        <h2>坐在寶座上聖潔羔羊</h2>
+                        <h2>全心跟隨</h2>
                       </div>
                       <div class="text">
-                        詞：葛兆昕 &nbsp;&nbsp;曲：葛兆昕 <br /><br />
-                        坐在寶座上聖潔羔羊 <br />
-                        我們俯伏敬拜祢 <br />
-                        昔在今在以後永在 <br />
-                        唯有祢是全能真神 <br />
-                        坐在寶座上尊貴羔羊 <br />
-                        我們俯伏敬拜祢 <br />
-                        頌讚尊貴榮耀權勢 <br />
-                        都歸給祢直到永遠 <br />
+                        詞/曲：張仁蕙 <br /><br />
+                        Verse1<br />
+                        曾迷失黑夜裡 祢尋回了我<br />
+                        祢不看 我的過去 祢接納了我<br />
+                        祢的愛 何等偉大 觸摸我心深處<br />
+                        我願用 一生來回應 祢的愛 我主<br />
                         <br />
-                        萬王之王 萬主之主 <br />唯有祢配得敬拜和尊崇 <br />萬王之王 萬主之主
-                        <br />我們高舉祢聖名直到永遠 <br /><br />
-                        坐在寶座上聖潔羔羊 <br />我們俯伏敬拜祢 <br />昔在今在以後永在<br />
-                        唯有祢是全能真神 <br />坐在寶座上尊貴羔羊 <br />我們俯伏敬拜祢<br />
-                        頌讚尊貴榮耀權勢 <br />都歸給祢直到永遠 <br /><br />萬王之王 萬主之主
-                        <br />唯有祢配得敬拜和尊崇 <br />萬王之王 萬主之主
-                        <br />我們高舉祢聖名直到永遠 <br />萬王之王 萬主之主
-                        <br /><br />唯有祢配得敬拜和尊崇 <br />萬王之王 萬主之主
-                        <br />我們高舉祢聖名直到永遠 <br />我們高舉祢聖名直到永遠 到永遠
+                        Chorus<br />
+                        主求祢改變我<br />
+                        永不再回到過去<br />
+                        捨下自己 全心跟隨祢<br />
+                        更新我的生命<br />
+                        指教我明白祢心意<br />
+                        悅納我 成為祢的兒女<br />
+                        <br />
+                        主求祢塑造我<br />
+                        我願一生為祢用<br />
+                        永不放棄 全心跟隨祢<br />
+                        獻上我的生命<br />
+                        成為聖潔的器皿<br />
+                        帶領我 走向祢的命定<br />
+                        為祢而活<br />
+                        <br />
+                        Verse2 <br />
+                        疲乏軟弱的靈 重新得能力<br />
+                        祢賜 給我信心 使我更堅定<br />
+                        祢的光 照亮我心 找到生命意義<br />
+                        祢是我 生命的目的 我全心尋求祢<br />
+                        <br />
+                        Chorus<br />
+                        主求祢改變我<br />
+                        永不再回到過去<br />
+                        捨下自己 全心跟隨祢<br />
+                        更新我的生命<br />
+                        指教我明白祢心意<br />
+                        悅納我 成為祢的兒女<br />
+                        <br />
+                        主求祢塑造我<br />
+                        我願一生為祢用<br />
+                        永不放棄 全心跟隨祢<br />
+                        獻上我的生命<br />
+                        成為聖潔的器皿<br />
+                        帶領我 走向祢的命定<br />
+                        為祢而活<br />
+                        <br />
+                        Bridge<br />
+                        我生命的渴望<br />
+                        願能更像祢<br />
+                        我生命的盼望<br />
+                        單單信靠祢<br />
+                        我生命的渴望<br />
+                        願能更像祢<br />
+                        我生命的盼望<br />
+                        單單信靠祢<br />
+                        耶穌<br />
+                        <br />
+                        Chorus<br />
+                        主求祢改變我<br />
+                        永不再回到過去<br />
+                        捨下自己 全心跟隨祢<br />
+                        更新我的生命<br />
+                        指教我明白祢心意<br />
+                        悅納我 成為祢的兒女<br />
+                        <br />
+                        主求祢塑造我<br />
+                        我願一生為祢用<br />
+                        永不放棄 全心跟隨祢<br />
+                        獻上我的生命<br />
+                        成為聖潔的器皿<br />
+                        帶領我 走向祢的命定<br />
+                        為祢而活<br />
                       </div>
                     </div>
                   </div>
