--- a/song_6.html
+++ b/song_6.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta
+      name="google"
+      value="notranslate" />
     <title>Pingtung Peace Church 70</title>
     <meta
       name="viewport"
@@ -220,6 +223,14 @@
                     <div class="inner-column">
                       <div class="sec-title">
                         <h2>當祢找到我</h2>
+                        <p style="font-size: small; padding-top: 0.5rem">
+                          暗やみの中で（當祢找到我日文版)
+                        </p>
+                        <audio controls>
+                          <source
+                            src="assets/When You Found Me.mp3"
+                            type="audio/mpeg" />
+                        </audio>
                       </div>
                       <div class="text">
                         詞：葛兆昕 &nbsp;&nbsp;曲：葛兆昕 <br /><br />
