--- a/about.html
+++ b/about.html
@@ -2,21 +2,47 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta
+      name="google"
+      value="notranslate" />
+    <meta
+      name="google"
+      value="notranslate" />
     <title>Serenity, HTML Responsive Portfolio</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="" />
+    <meta
+      name="author"
+      content="" />
     <!-- Le styles -->
-    <link href="css/bootstrap.css" rel="stylesheet" />
-    <link href="css/icons.css" rel="stylesheet" media="screen" />
-    <link href="css/custom.css" rel="stylesheet" />
-    <link href="css/skindefault.css" rel="stylesheet" />
-    <link href="css/bootstrap-responsive.css" rel="stylesheet" />
+    <link
+      href="css/bootstrap.css"
+      rel="stylesheet" />
+    <link
+      href="css/icons.css"
+      rel="stylesheet"
+      media="screen" />
+    <link
+      href="css/custom.css"
+      rel="stylesheet" />
+    <link
+      href="css/skindefault.css"
+      rel="stylesheet" />
+    <link
+      href="css/bootstrap-responsive.css"
+      rel="stylesheet" />
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
-      <link rel="stylesheet" type="text/css" href="css/ie.css" />
+      <link
+        rel="stylesheet"
+        type="text/css"
+        href="css/ie.css" />
     <![endif]-->
     <!-- Jquery - The rest of the scripts at the bottom-->
     <script src="js/jquery-1.9.0.min.js"></script>
@@ -36,12 +62,19 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="index.html">SERENITY.</a>
+          <a
+            class="brand"
+            href="index.html"
+            >SERENITY.</a
+          >
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li><a href="index.html">Home</a></li>
               <li class="active dropdown">
-                <a href="#" class="dropdown-toggle js-activated" data-toggle="dropdown"
+                <a
+                  href="#"
+                  class="dropdown-toggle js-activated"
+                  data-toggle="dropdown"
                   >Pages <b class="caret"></b
                 ></a>
                 <ul class="dropdown-menu">
@@ -70,7 +103,10 @@
                 </ul>
               </li>
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle js-activated" data-toggle="dropdown"
+                <a
+                  href="#"
+                  class="dropdown-toggle js-activated"
+                  data-toggle="dropdown"
                   >Features <b class="caret"></b
                 ></a>
                 <ul class="dropdown-menu">
@@ -141,31 +177,55 @@
         <ul class="thumbnails">
           <li class="span3">
             <div class="thumbnail">
-              <img src="img/dummyimage.jpg" alt="" />
+              <img
+                src="img/dummyimage.jpg"
+                alt="" />
               <div class="caption">
                 <h4>Mary S. Foster</h4>
                 <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
                 <ul class="social-links">
                   <li class="twitter-link">
-                    <a href="#" class="twitter has-tip" target="_blank" title="Follow Us on Twitter"
+                    <a
+                      href="#"
+                      class="twitter has-tip"
+                      target="_blank"
+                      title="Follow Us on Twitter"
                       >Twitter</a
                     >
                   </li>
                   <li class="facebook-link">
-                    <a href="#" class="facebook has-tip" target="_blank" title="Join us on Facebook"
+                    <a
+                      href="#"
+                      class="facebook has-tip"
+                      target="_blank"
+                      title="Join us on Facebook"
                       >Facebook</a
                     >
                   </li>
                   <li class="google-link">
-                    <a href="#" class="google has-tip" title="Google +" target="_blank">Google</a>
+                    <a
+                      href="#"
+                      class="google has-tip"
+                      title="Google +"
+                      target="_blank"
+                      >Google</a
+                    >
                   </li>
                   <li class="linkedin-link">
-                    <a href="#" class="linkedin has-tip" title="Linkedin" target="_blank"
+                    <a
+                      href="#"
+                      class="linkedin has-tip"
+                      title="Linkedin"
+                      target="_blank"
                       >Linkedin</a
                     >
                   </li>
                   <li class="pinterest-link">
-                    <a href="#" class="pinterest has-tip" title="Pinterest" target="_blank"
+                    <a
+                      href="#"
+                      class="pinterest has-tip"
+                      title="Pinterest"
+                      target="_blank"
                       >Pinterest</a
                     >
                   </li>
@@ -176,31 +236,55 @@
           </li>
           <li class="span3">
             <div class="thumbnail">
-              <img src="img/dummyimage.jpg" alt="" />
+              <img
+                src="img/dummyimage.jpg"
+                alt="" />
               <div class="caption">
                 <h4>Mary S. Foster</h4>
                 <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
                 <ul class="social-links">
                   <li class="twitter-link">
-                    <a href="#" class="twitter has-tip" target="_blank" title="Follow Us on Twitter"
+                    <a
+                      href="#"
+                      class="twitter has-tip"
+                      target="_blank"
+                      title="Follow Us on Twitter"
                       >Twitter</a
                     >
                   </li>
                   <li class="facebook-link">
-                    <a href="#" class="facebook has-tip" target="_blank" title="Join us on Facebook"
+                    <a
+                      href="#"
+                      class="facebook has-tip"
+                      target="_blank"
+                      title="Join us on Facebook"
                       >Facebook</a
                     >
                   </li>
                   <li class="google-link">
-                    <a href="#" class="google has-tip" title="Google +" target="_blank">Google</a>
+                    <a
+                      href="#"
+                      class="google has-tip"
+                      title="Google +"
+                      target="_blank"
+                      >Google</a
+                    >
                   </li>
                   <li class="linkedin-link">
-                    <a href="#" class="linkedin has-tip" title="Linkedin" target="_blank"
+                    <a
+                      href="#"
+                      class="linkedin has-tip"
+                      title="Linkedin"
+                      target="_blank"
                       >Linkedin</a
                     >
                   </li>
                   <li class="pinterest-link">
-                    <a href="#" class="pinterest has-tip" title="Pinterest" target="_blank"
+                    <a
+                      href="#"
+                      class="pinterest has-tip"
+                      title="Pinterest"
+                      target="_blank"
                       >Pinterest</a
                     >
                   </li>
@@ -211,31 +295,55 @@
           </li>
           <li class="span3">
             <div class="thumbnail">
-              <img src="img/dummyimage.jpg" alt="" />
+              <img
+                src="img/dummyimage.jpg"
+                alt="" />
               <div class="caption">
                 <h4>Mary S. Foster</h4>
                 <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
                 <ul class="social-links">
                   <li class="twitter-link">
-                    <a href="#" class="twitter has-tip" target="_blank" title="Follow Us on Twitter"
+                    <a
+                      href="#"
+                      class="twitter has-tip"
+                      target="_blank"
+                      title="Follow Us on Twitter"
                       >Twitter</a
                     >
                   </li>
                   <li class="facebook-link">
-                    <a href="#" class="facebook has-tip" target="_blank" title="Join us on Facebook"
+                    <a
+                      href="#"
+                      class="facebook has-tip"
+                      target="_blank"
+                      title="Join us on Facebook"
                       >Facebook</a
                     >
                   </li>
                   <li class="google-link">
-                    <a href="#" class="google has-tip" title="Google +" target="_blank">Google</a>
+                    <a
+                      href="#"
+                      class="google has-tip"
+                      title="Google +"
+                      target="_blank"
+                      >Google</a
+                    >
                   </li>
                   <li class="linkedin-link">
-                    <a href="#" class="linkedin has-tip" title="Linkedin" target="_blank"
+                    <a
+                      href="#"
+                      class="linkedin has-tip"
+                      title="Linkedin"
+                      target="_blank"
                       >Linkedin</a
                     >
                   </li>
                   <li class="pinterest-link">
-                    <a href="#" class="pinterest has-tip" title="Pinterest" target="_blank"
+                    <a
+                      href="#"
+                      class="pinterest has-tip"
+                      title="Pinterest"
+                      target="_blank"
                       >Pinterest</a
                     >
                   </li>
@@ -246,31 +354,55 @@
           </li>
           <li class="span3">
             <div class="thumbnail">
-              <img src="img/dummyimage.jpg" alt="" />
+              <img
+                src="img/dummyimage.jpg"
+                alt="" />
               <div class="caption">
                 <h4>Mary S. Foster</h4>
                 <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
                 <ul class="social-links">
                   <li class="twitter-link">
-                    <a href="#" class="twitter has-tip" target="_blank" title="Follow Us on Twitter"
+                    <a
+                      href="#"
+                      class="twitter has-tip"
+                      target="_blank"
+                      title="Follow Us on Twitter"
                       >Twitter</a
                     >
                   </li>
                   <li class="facebook-link">
-                    <a href="#" class="facebook has-tip" target="_blank" title="Join us on Facebook"
+                    <a
+                      href="#"
+                      class="facebook has-tip"
+                      target="_blank"
+                      title="Join us on Facebook"
                       >Facebook</a
                     >
                   </li>
                   <li class="google-link">
-                    <a href="#" class="google has-tip" title="Google +" target="_blank">Google</a>
+                    <a
+                      href="#"
+                      class="google has-tip"
+                      title="Google +"
+                      target="_blank"
+                      >Google</a
+                    >
                   </li>
                   <li class="linkedin-link">
-                    <a href="#" class="linkedin has-tip" title="Linkedin" target="_blank"
+                    <a
+                      href="#"
+                      class="linkedin has-tip"
+                      title="Linkedin"
+                      target="_blank"
                       >Linkedin</a
                     >
                   </li>
                   <li class="pinterest-link">
-                    <a href="#" class="pinterest has-tip" title="Pinterest" target="_blank"
+                    <a
+                      href="#"
+                      class="pinterest has-tip"
+                      title="Pinterest"
+                      target="_blank"
                       >Pinterest</a
                     >
                   </li>
@@ -291,7 +423,11 @@
         <!-- 1st row -->
         <div class="row-fluid">
           <div class="span12 text-center">
-            <h1 class="title" style="color: #ccc">Get in touch</h1>
+            <h1
+              class="title"
+              style="color: #ccc">
+              Get in touch
+            </h1>
             <p>If you have a specific project or event for us, get in touch today on:</p>
             <span>+42 (0) 628 593 842</span> or <span>photo@serenity.com.au</span>
           </div>
@@ -315,23 +451,47 @@
           <div class="span4 smallspacetop">
             <ul class="social-links pull-right">
               <li class="twitter-link">
-                <a href="#" class="twitter has-tip" target="_blank" title="Follow Us on Twitter"
+                <a
+                  href="#"
+                  class="twitter has-tip"
+                  target="_blank"
+                  title="Follow Us on Twitter"
                   >Twitter</a
                 >
               </li>
               <li class="facebook-link">
-                <a href="#" class="facebook has-tip" target="_blank" title="Join us on Facebook"
+                <a
+                  href="#"
+                  class="facebook has-tip"
+                  target="_blank"
+                  title="Join us on Facebook"
                   >Facebook</a
                 >
               </li>
               <li class="google-link">
-                <a href="#" class="google has-tip" title="Google +" target="_blank">Google</a>
+                <a
+                  href="#"
+                  class="google has-tip"
+                  title="Google +"
+                  target="_blank"
+                  >Google</a
+                >
               </li>
               <li class="linkedin-link">
-                <a href="#" class="linkedin has-tip" title="Linkedin" target="_blank">Linkedin</a>
+                <a
+                  href="#"
+                  class="linkedin has-tip"
+                  title="Linkedin"
+                  target="_blank"
+                  >Linkedin</a
+                >
               </li>
               <li class="pinterest-link">
-                <a href="#" class="pinterest has-tip" title="Pinterest" target="_blank"
+                <a
+                  href="#"
+                  class="pinterest has-tip"
+                  title="Pinterest"
+                  target="_blank"
                   >Pinterest</a
                 >
               </li>
