--- a/agape.html
+++ b/agape.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta
+      name="google"
+      value="notranslate" />
     <title>Pingtung Peace Church 70</title>
     <meta
       name="viewport"
@@ -95,6 +98,7 @@
 
       body {
         background-image: url("assets/design/img1.png");
+        /* background-size: cover; */
         background-size: contain;
 
         /* background-repeat: no-repeat; */
@@ -108,7 +112,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, 0.75);
+        background-color: rgba(0, 0, 0, 0.5);
         z-index: -1;
         /* filter: blur(5px); */
       }
@@ -135,16 +139,19 @@
 	  ================================================== -->
     <div class="container">
       <div class="align-items-center justify-content-center text-center">
-        <div class="col-12">
-          <h1 class="display-huge mt-3 lh-1 tab-container effectTab-header">Agape 愛咖啡</h1>
-        </div>
+        <!-- <div class="col-12">
+          <h1 class="display-huge mt-3 lh-1 tab-container effectTab-header">
+            Agape 愛咖啡——有限的空間，無限的可能
+          </h1>
+        </div> -->
 
-        <p>Agape 愛咖啡——有限的空間，無限的可能</p>
-        <blockquote
-          data-aos="fade-up"
-          data-aos-duration="2000">
-          <h1 class="title">串連品牌、經營平台、為下一代青年人找出路！</h1>
-        </blockquote>
+        <h1>Agape 愛咖啡——有限的空間，無限的可能</h1>
+        <h1
+          class="title"
+          style="padding-top: 2rem; padding-bottom: 2rem">
+          串連品牌、經營平台、為下一代青年人找出路！
+        </h1>
+
         <div data-aos="fade-up">
           <img
             src="assets/image/ch4/01.jpg"
@@ -197,46 +204,38 @@
                             <h4
                               class="time_line-date"
                               style="color: #eef2e6">
-                              醞釀
+                              醞釀｜異象傳遞
                             </h4>
                           </div>
-                          <div class="time_line-content">
+                          <!-- <div class="time_line-content">
                             <h5 class="time_line-title"> 當牧師開始傳遞</h5>
                             <div class="time_line-descr">
                               「和平教會2.0」——多元的教會、體驗的教會、未來的教會，便開始醞釀這個多功能空間
                             </div>
-                          </div>
+                          </div> -->
                         </div>
                         <div class="row-fluid">
-                          <div class="span5">
-                            2019跨2020年的跨年禱告會裡，兆昕牧師分享和平教會2.0的建造異象，其中多元的教會、體驗的教會，<br />以及未來的教會，就是催生多功能空間的關鍵！
-                            <br /><br />仁蕙傳道：「從那個時候起，教會就開始醞釀『Agape
-                            愛咖啡』這個空間的誕生。」<br /><br />
-                          </div>
-                          <div class="span1"></div>
                           <div
                             class="span5"
-                            style="padding-left: 2rem">
-                            在這裡不只是一間咖啡廳，讓教會的弟兄姊妹有一個舒適的空間可以聚會、做外展活動而已，<br />和平教會是一個使徒性教會，多功能空間更是以新世代領袖的創育空間，與使徒性教會宣教平台的理念來經營！
+                            style="text-align: start">
+                            從2019年邁入2020年的跨年禱告會裡，兆昕牧師分享了建造「和平教會2.0」的異象，其中談到「多元的教會」、「體驗的教會」以及「未來的教會」，就成了催生「Agape愛咖啡——多功能空間」的關鍵，並開始醞釀與思考這個空間的氛圍與樣貌。
+                            <br />
+                            <br />
+                            對和平教會而言，這個空間不僅是一間咖啡館，讓教會的弟兄姊妹有一個舒適的空間可以聚會、舉辦外展活動而已。和平教會被神呼召建造使徒性教會，因此，Agape愛咖啡更是以「新世代領袖的創育空間」，與「使徒性教會宣教平台」的理念來經營！
+                          </div>
+                          <div
+                            class="row-fluid mb-5 pt-3"
+                            data-aos="zoom-in-left">
+                            <ul style="display: flex; justify-content: center">
+                              <li class="span7">
+                                <img
+                                  src="assets/image/ch4/02.jpg"
+                                  alt="img2" />
+                              </li>
+                            </ul>
                           </div>
                         </div>
 
-                        <div
-                          class="row-fluid mb-5 pt-3"
-                          data-aos="zoom-in-left">
-                          <ul style="display: flex; justify-content: center">
-                            <li class="span7">
-                              <img
-                                src="assets/image/ch4/02.jpg"
-                                alt="img2" />
-                            </li>
-                            <li class="span5">
-                              <img
-                                src="assets/image/ch4/03.jpg"
-                                alt="img3" />
-                            </li>
-                          </ul>
-                        </div>
                         <div></div>
 
                         <!-- RED -->
