--- a/effect.html
+++ b/effect.html
@@ -2,6 +2,9 @@
   <head>
     <meta charset="utf-8" />
     <meta
+      name="google"
+      value="notranslate" />
+    <meta
       name="viewport"
       content="width=device-width, initial-scale=1" />
   </head>
