--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta
+      name="google"
+      value="notranslate" />
+    <meta
+      name="google"
+      value="notranslate" />
     <title>Pingtung Peace Church 70</title>
     <meta
       name="viewport"
@@ -204,7 +210,7 @@
           controls
           poster="assets/image/videoPic/img_2.png">
           <source
-            src="assets/video/70PPC_FINAL.mov"
+            src="assets/video/70PPC_FINAL.mp4"
             type="video/mp4" />
         </video>
 
