--- a/loading.html
+++ b/loading.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
+    <meta
+      name="google"
+      value="notranslate" />
     <title>My Static Webpage</title>
     <!-- Loading Animation CSS -->
     <style>
