--- a/ppcTenYears_8-1.html
+++ b/ppcTenYears_8-1.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta
+      name="google"
+      value="notranslate" />
     <title>Pingtung Peace Church 70</title>
     <meta
       name="viewport"
@@ -170,7 +173,7 @@
               <li class="span4">
                 <div class="thumbnail">
                   <img
-                    src="assets/image/ch2.8/img_8.webp"
+                    src="assets/image/ch2.8/img_8.jpeg"
                     alt="" />
                 </div>
               </li>
