--- a/song.html
+++ b/song.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta
+      name="google"
+      value="notranslate" />
     <title>Pingtung Peace Church 70</title>
     <meta
       name="viewport"
@@ -291,14 +294,14 @@
                         alt="" />
                     </div>
                     <h2>PPC Worship</h2>
-                    <p style="font-size: small; padding-top: 0.5rem">
+                    <!-- <p style="font-size: small; padding-top: 0.5rem">
                       暗やみの中で（當祢找到我日文版)
                     </p>
                     <audio controls>
                       <source
                         src="assets/When You Found Me.mp3"
                         type="audio/mpeg" />
-                    </audio>
+                    </audio> -->
                   </div>
                 </li>
                 <!-- row 7 -->
@@ -359,11 +362,20 @@
                 <li>
                   <h1 style="text-align: center; padding-right: 11rem">2022</h1>
                   <div>
-                    <h1
-                      class="title"
-                      style="padding-bottom: 0.25rem">
-                      全心跟隨
-                    </h1>
+                    <div class="d-flex align-items-center justify-content-center">
+                      <a href="song_10.html">
+                        <h1
+                          class="title"
+                          style="padding-bottom: 0.25rem">
+                          全心跟隨
+                        </h1>
+                      </a>
+                      <img
+                        style="height: 32px"
+                        src="img/click.webp"
+                        alt="" />
+                    </div>
+
                     <h2>PPC Worship</h2>
                   </div>
                 </li>
