--- a/song_7.html
+++ b/song_7.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta
+      name="google"
+      value="notranslate" />
     <title>Pingtung Peace Church 70</title>
     <meta
       name="viewport"
@@ -202,13 +205,14 @@
                 </a>
               </div>
               <div style="width: 100%; height: 0; position: relative; padding-bottom: 56.25%">
-                <iframe
-                  src="https://www.youtube.com/embed/cEqCp5gXnuQ"
-                  title="YouTube video player"
-                  frameborder="0"
+                <video
                   style="position: absolute; top: 0; left: 0; width: 100%; height: 100%"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                  allowfullscreen></iframe>
+                  controls
+                  poster="assets/image/videoPic/img_13.png">
+                  <source
+                    src="assets/video/PPC_Worship_1.mp4"
+                    type="video/mp4" />
+                </video>
               </div>
             </div>
             <div
