--- a/team.html
+++ b/team.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta
+      name="google"
+      value="notranslate" />
     <title>Serenity, HTML Responsive Portfolio</title>
     <meta
       name="viewport"
