--- a/test.html
+++ b/test.html
@@ -5,6 +5,9 @@
   <head>
     <meta charset="utf-8" />
     <meta
+      name="google"
+      value="notranslate" />
+    <meta
       name="viewport"
       content="width=device-width,initial-scale=1,shrink-to-fit=no" />
     <meta
