--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         <button
           class="custom-btn btn-9"
           onclick="location.href='aboutPPC.html'">
-          關於PPC70
+          認識和平教會
         </button>
         <!-- END Video -->
       </div>
