--- a/ppcCulture.html
+++ b/ppcCulture.html
@@ -172,19 +172,19 @@
                   data-title="希尼爾事務所"
                   data-description="YQ SENIOR"
                   data-linkurl="ppcCulture_6.html"
-                  data-imgurl="assets/image/ch3/img_9.jpeg"></div>
+                  data-imgurl="assets/image/ch3/img_9.png"></div>
                 <div
                   class="columnFour_component"
                   data-title="大大集散地"
                   data-description="Dada center"
                   data-linkurl="ppcCulture_7.html"
-                  data-imgurl="assets/image/ch3/img_6.jpeg"></div>
+                  data-imgurl="assets/image/ch3/dada.png"></div>
                 <div
                   class="columnFour_component"
                   data-title="愛窩客"
                   data-description="i WORK"
                   data-linkurl="ppcCulture_8.html"
-                  data-imgurl="assets/image/ch3/img_4.jpeg"></div>
+                  data-imgurl="assets/image/ch3/iwork.png"></div>
                 <div
                   class="columnFour_component"
                   data-title="社工共乘"
