--- a/ppcCulture_11.html
+++ b/ppcCulture_11.html
@@ -164,7 +164,7 @@
       }
       .contentText {
         color: grey;
-        font-size: small;
+        font-size: large;
       }
 
       body {
@@ -223,12 +223,13 @@
                         <h2>｜老神在在｜</h2>
                       </div>
                       <div class="text">
-                        「老神在在」是專為已退休人員及65歲以上年長者所設立的事工。事工設立有兩大目標：
+                        「老神在在」是專為已退休人員及65歲 以上年長者所設立的事工。事工設立
+                        有兩大目標:
                       </div>
                       <div class="textContent">
                         <p>✓ /老，而神同在/</p>
                         <p class="contentText">
-                          「老神在在」致力於幫助每位年長者屬靈生命持續成長，身上除了歲月留下的刻痕之外，更擁有神同在的記號。「抓住神，跟隨神，一直到老」不只是一句口號，更是生命的實踐，外表雖然漸漸衰退，但內心卻一天新似一天；年華雖然逐漸老去，卻天天都有神的同在——「老，神在在」，因為有神的同在而能真正擁有「老神在在」的生命！
+                          「老神在在」致力於幫助每位年長者屬靈生命持續成長，身上除了歲月留下的刻痕之外，更擁有神同在的記號。「抓住神，跟隨神，一直到老」不只是一句口號，更是生命的實踐，外表雖然漸漸衰退，但內心卻一天新似一天；年華雖然逐漸老去，卻天天都有神的同在——「老，神在在」，因為有神的同在就能真正擁有「老神在在」的生命！
                         </p>
                         <br />
                         <p>✓ /白髮是榮耀的冠冕，老年人的尊榮/</p>
