--- a/ppcCulture_3.html
+++ b/ppcCulture_3.html
@@ -241,7 +241,7 @@
                         <h2>｜好家親子丼｜</h2>
                       </div>
                       <div class="text">
-                        好家親子丼」是專為有0-6歲孩子的小家庭所打造之平台；期待每一個小家庭都能經營以基督為中心的家庭生活。
+                        「好家親子丼」是專為有0-6歲孩子的小家庭所打造之平台；期待每一個小家庭都能經營以基督為中心的家庭生活。
                       </div>
                       <div class="textContent">
                         <p style="text-align: left">
