--- a/ppcCulture_4.html
+++ b/ppcCulture_4.html
@@ -243,7 +243,7 @@
                       <div class="text">
                         《Youth
                         Quake》是一個專為青年人打造，充滿創意、熱情與活力的平台，每年三到四月，我們舉辦《Youth
-                        Quake校際新創藝大賽》，透過以校為單位的各項比賽，凝聚中學校園的青少年學生們，一同為校爭光，這不僅在大屏東地區掀起一股熱愛校園的浪潮，同時提供了一個機會，讓青年學生們的潛能、創意與才幹有了發揮與發展的空間，讓他們能勇敢的站在台上展現自己，信心能以突破！
+                        Quake校際新創藝大賽》，透過以校為單位的各項比賽，凝聚中學校園的青少年學生們，一同為校爭光，這不僅在大屏東地區掀起一股熱愛校園的浪潮，同時提供了一個機會，讓青年學生們的潛能、創意與才幹有了發揮與發展的空間，讓他們能勇敢地站在台上展現自己，信心得以被突破！
                       </div>
                       <div class="textContent">
                         <p>
