--- a/ppcCulture_8.html
+++ b/ppcCulture_8.html
@@ -245,7 +245,7 @@
                       </div>
                       <div class="textContent">
                         <p>
-                          提供職青在平台上共創、共享職人生活，串連新創藝、新創業、新媒體等相關內容，幫助每一位愛窩客不僅是熱愛工作，更能明白上帝的呼召，接受差派、委身職場、經營發展，實踐上帝所賜的命定！
+                          提供職青在平台上共創、共享職人生活，串連新創藝、新創業、新媒體等內容，幫助每一位愛窩客不僅是熱愛工作，更能明白上帝的呼召，接受差派、委身職場、經營發展，實踐上帝所賜的命定！
                         </p>
                       </div>
                     </div>
@@ -261,7 +261,7 @@
                   <div class="inner-column">
                     <div class="image">
                       <img
-                        src="assets/design/A_204384.jpg"
+                        src="assets/image/ch3/iwork.png"
                         alt="" />
                     </div>
                   </div>
