--- a/ppcTenYears_3.html
+++ b/ppcTenYears_3.html
@@ -132,7 +132,7 @@
         <blockquote
           data-aos="fade-up"
           data-aos-duration="2000">
-          <h1 class="title">「一個人在一個平台被接觸的越久，生命改變的機會就越大！」</h1>
+          <h1 class="title">「一個人在平台被接觸的愈久，生命改變的機會就愈大！」</h1>
           <small>兆昕牧師 </small>
         </blockquote>
         <div
