--- a/ppcTenYears_4.html
+++ b/ppcTenYears_4.html
@@ -139,20 +139,22 @@
         </div>
         <!-- Video
 			================================================== -->
-        <video
-          class="span12"
-          controls
-          poster="assets/image/videoPic/img_1.png">
-          <source
-            src="assets/video/2020_V13_Aftermovie.mp4"
-            type="video/mp4" />
-        </video>
+        <div>
+          <video
+            class="span12"
+            controls
+            poster="assets/image/videoPic/img_1.png">
+            <source
+              src="assets/video/2020_V13_Aftermovie.mp4"
+              type="video/mp4" />
+          </video>
+        </div>
         <!-- END Video -->
         <div
           class="bordered spacebot text-secondary"
-          style="text-align: justify; padding-top: 1rem"
+          style="text-align: justify"
           data-aos="fade-up">
-          在舊約時代有三位勇士－沙得拉、米煞、亞伯尼哥，他們曾站立在異教金像面前，雖遭受強大的勢力壓迫、列焰火窯的威嚇，他們依然勇敢站立，無懼生死之威脅，不向金像屈膝，持守對主的忠誠，毫不妥協，最終儘管被丟進火窯中，上帝卻拯救他們，毫髮無傷，大大得勝！
+          在舊約時代有三位勇士－沙得拉、米煞、亞伯尼哥，他們曾站立在異教金像面前，雖遭受強大的勢力壓迫、烈焰火窯的威嚇，他們依然勇敢站立，無懼生死之威脅，不向金像屈膝，持守對主的忠誠，毫不妥協，最終儘管被丟進火窯中，上帝卻拯救他們，毫髮無傷，大大得勝！
         </div>
         <div
           class="thumbnail"
