--- a/ppcTenYears_6.html
+++ b/ppcTenYears_6.html
@@ -464,7 +464,7 @@
                 src="assets/image/ch2.6/19.jpeg"
                 alt="" />
             </div>
-            以小組為單位，在各處舉辦聖誕派對，精心的佈置場地、設計流程、規劃內容，邀請所認領的人來參與，使亮燈歡慶、聖誕歡慶已經被接觸、得著的人能夠繼續的參與小組，也讓尚未被得著的人有再一次機會被得著。也使大家在其中建立更加深刻的情誼，分享生命見證與福音信息，呼召人們領受救恩。
+            以小組為單位，在各處舉辦聖誕派對，精心的佈置場地、設計流程、規劃內容，邀請所認領的人來參與，使亮燈歡慶、聖誕歡慶已經被接觸、得著的人能夠繼續的參與小組，也讓尚未被得著的人有再一次的機會被得著。也讓大家在其中建立更加深刻的情誼，分享生命見證與福音信息，呼召人們領受救恩。
           </div>
         </div>
         <!--  -->
