--- a/ppcTenYears_7.html
+++ b/ppcTenYears_7.html
@@ -246,7 +246,7 @@
               <li class="span3">
                 <div class="thumbnail">
                   <img
-                    src="assets/image/ch2.7/09.jpg"
+                    src="assets/image/ch2.7/09.png"
                     alt="" />
                 </div>
               </li>
