--- a/ppcTenYears_8-2.html
+++ b/ppcTenYears_8-2.html
@@ -246,7 +246,7 @@
           controls
           poster="assets/image/videoPic/img_6.png">
           <source
-            src="assets/video/PPC Globle_worship.mp4"
+            src="assets/video/PPC_worship_5.mp4"
             type="video/mp4" />
         </video>
       </div>
