--- a/ppcTenYears_8-3.html
+++ b/ppcTenYears_8-3.html
@@ -153,6 +153,8 @@
             和平教會開始進行「實體＋線上崇拜」，並且無論是實體或線上，對於「主日聚會的經營」，
             都有一定的講究與不可動搖的理念，
             盼望弟兄姊妹能一齊朝著同樣的異象、站在相同的根基上，一同建造教會！
+            <br /><br />
+            首先，在仍可進行實體崇拜時，教會鼓勵弟兄姊妹參與實體聚會，而崇拜亦同步進行線上轉播，如因身體不適、確診或為密切接觸者而須自主健康管理時，便可參與線上崇拜。
           </div>
           <div
             class="row-fluid"
