--- a/ppcCulture_9.html
+++ b/ppcCulture_9.html
@@ -228,7 +228,7 @@
                   <div class="content-column">
                     <div class="inner-column">
                       <div class="sec-title">
-                        <div class="title">SC</div>
+                        <div class="title">Social Workers</div>
                         <h2>｜社工共乘｜</h2>
                       </div>
                       <div class="text">「社工共乘」是一個社工人員的專屬平台</div>
