--- a/ppcTenYears_5.html
+++ b/ppcTenYears_5.html
@@ -166,6 +166,7 @@
             style="text-align: justify"
             data-aos="fade-up">
             而今年，有感於世界各地天災頻仍：極端氣候、洪災、雪災、地震帶來許多嚴重災情；世界情勢十分動盪：烏俄戰爭開打、台海局勢經歷前所未有的危機、南北韓關係緊張…；無預警的事件一夕間奪走許多人的生命：印尼足球暴動、梨泰院踩踏事件…等等。
+            種種跡象如同警訊般響起，正在告訴教會，我們必須加速教會的建造，加速贏得教會的未來！
           </div>
           <div
             class="thumbnail"
@@ -177,14 +178,8 @@
         </div>
       </div>
       <!-- Row2 -->
-      <div class="align-items-center justify-content-center text-center">
+      <div class="align-items-center justify-content-center text-center pt-5">
         <div class="col-12">
-          <div
-            class="bordered spacebot text-secondary"
-            style="text-align: justify"
-            data-aos="fade-up">
-            種種跡象如同警訊般響起，正在告訴教會，我們必須加速教會的建造，加速贏得教會的未來！
-          </div>
           <blockquote
             data-aos="fade-up"
             data-aos-duration="2000">
@@ -233,13 +228,21 @@
         <div class="col-12">
           <div
             class="bordered spacebot text-secondary"
-            style="text-align: center"
+            style="text-align: start"
             data-aos="fade-up">
             此外，由於今年為和平教會設教七十週年，教會更舉辦了：
-            <p>-PPC 70建造教會研習會／復興特會-<br />- 萬國尼希米特別聚會-</p>
-            分別邀請到Greg
-            Miller牧師、新生命小組教會的主任牧師——顧其芸牧師、以及大都會國際兒童事工創辦人——Bill
-            Wilson牧師前來擔任講員，每一篇信息都在對和平教會說話！
+            <ul>
+              <li style="padding: 0.5rem">PPC 70建造教會研習會／復興特會</li>
+              <li style="padding: 0.5rem">萬國尼希米特別聚會</li>
+            </ul>
+
+            分別邀請到
+            <ul>
+              <li style="padding: 0.5rem">Greg Miller牧師</li>
+              <li style="padding: 0.5rem">新生命小組教會的主任牧師——顧其芸牧師</li>
+              <li style="padding: 0.5rem">大都會國際兒童事工創辦人——Bill Wilson牧師</li>
+            </ul>
+            三位與和平教會關係密切的牧者前來擔任講員，每一篇信息都在對和平教會說話！
           </div>
           <div
             class="row-fluid"
