--- a/song.html
+++ b/song.html
@@ -134,51 +134,63 @@
         <div class="col-12">
           <h1 class="display-huge mt-3 lh-1 tab-container effectTab-header">詩歌創作</h1>
         </div>
-        <div class="row-fluid">
+        <div
+          class="row-fluid"
+          data-aos="fade-up">
           <div class="span6">
-            <div class="bordered"></div>
-            <!-- Left Image
-            ================================================== -->
-            <p class="textColor">
+            <div class="bordered">
               <img
-                src="assets/image/ch6/img_1.JPG"
+                src="assets/image/ch6/img_3.png"
                 class="pull-left paddingright"
-                style="height: 100px; width: 160px"
                 alt="" />
-              葛兆昕牧師從學生時期便開始嘗試詩歌創作，這些年來，陸陸續續創作了多首深入人心的敬拜歌曲，
-              而這些詩歌，往往是兆昕牧師在靈修、生活的體驗、經歷挑戰…之中，被神感動與觸摸所寫下的歌曲，
-              每一首歌曲中不只有情感，更富含神的話語，也表明了兆昕牧師對上帝呼召的回應。<br /><br />
-              這些詩歌流露出生命的恩膏，影響了世界各地許多人。一曲《祢愛永不變》，
-              在2000年為失去母親的陳逸豪牧師帶來極深的安慰，也在世界各地的華人地區不斷傳唱；《當祢找到我》的日文版，則在2016年熊本大地震中陪伴了許多受災的日本教會。在新冠疫情期間，兆昕牧師的多首歌曲更是為困境中的人們帶來安慰與盼望。
-            </p>
-            <!-- END Left Image -->
+            </div>
           </div>
+          <div
+            class="span6"
+            style="text-align: start">
+            <div class="bordered">
+              <p class="textColor">
+                葛兆昕牧師從學生時期便開始嘗試詩歌創作，這些年來，陸陸續續創作了多首深入人心的敬拜歌曲，
+                而這些詩歌，往往是兆昕牧師在靈修、生活的體驗、經歷挑戰…之中，被神感動與觸摸所寫下的歌曲，
+                每一首歌曲中不只有情感，更富含神的話語，也表明了兆昕牧師對上帝呼召的回應。<br /><br />
+              </p>
+              <p class="textColor">
+                這些詩歌流露出生命的恩膏，影響了世界各地許多人。一曲《祢愛永不變》在世界各地的華人地區不斷傳唱；《當祢找到我》的日文版，則在2016年熊本大地震中陪伴了許多受災的日本教會。在新冠疫情期間，兆昕牧師的多首歌曲更是為困境中的人們帶來安慰與盼望。
+              </p>
+            </div>
+          </div>
+        </div>
+        <div
+          class="row-fluid"
+          data-aos="fade-right">
           <div class="span6">
-            <div class="bordered"></div>
-            <!-- Right Image
-            ================================================== -->
-            <p class="textColor">
-              <img
-                src="assets/image/ch6/img_2.jpg"
-                class="pull-right paddingleft"
-                style="height: 100px; width: 160px"
-                alt="" />
+            <div
+              class="bordered"
+              style="padding-top: 2rem">
               於是，兆昕牧師不僅自己創作歌曲，也教導與鼓勵教會的敬拜團創作詩歌，
               張仁蕙傳道便與敬拜團同工創作了三首敬拜詩歌《一生所求》、《為祢站立》、《全心跟隨》。<br /><br />
               對和平教會而言，詩歌創作也是回應神要我們「建造使徒性教會」呼召的行動之一，盼望能夠幫助與帶領弟兄姊妹，進到更深的敬拜中，對神有更深的經歷；
               此外，我們或許無法親身去到每一個有需要的地區宣教，但詩歌卻能透過各種媒體去到那裡，也能觸摸人心。
-            </p>
-            <!-- END Right Image -->
+            </div>
+          </div>
+
+          <div class="span6">
+            <div class="bordered">
+              <img
+                src="assets/image/ch6/img_4.png"
+                class="pull-right paddingleft"
+                alt="" />
+            </div>
           </div>
         </div>
-
-        <div class="container">
+        <div
+          class="container"
+          data-aos="fade-up">
           <div class="align-items-center justify-content-center text-center">
             <div class="timeline-wrapper">
               <ul class="timelin-main">
                 <!-- row 1  -->
                 <li>
-                  <h1 style="text-align: center; padding-right: 11rem">2000</h1>
                   <div>
                     <div class="d-flex align-items-center justify-content-center">
                       <a href="song_1.html">
@@ -198,7 +210,6 @@
                 </li>
                 <!-- row 2 -->
                 <li>
-                  <h1 style="text-align: center; padding-left: 11rem">2000</h1>
                   <div>
                     <div class="d-flex align-items-center justify-content-center">
                       <a href="song_2.html">
@@ -218,7 +229,6 @@
                 </li>
                 <!-- row 3 -->
                 <li>
-                  <h1 style="text-align: center; padding-right: 11rem">2000</h1>
                   <div>
                     <div class="d-flex align-items-center justify-content-center">
                       <a href="song_3.html">
@@ -238,7 +248,6 @@
                 </li>
                 <!-- row 4  -->
                 <li>
-                  <h1 style="text-align: center; padding-left: 11rem">2000</h1>
                   <div>
                     <div class="d-flex align-items-center justify-content-center">
                       <a href="song_4.html">
@@ -258,7 +267,6 @@
                 </li>
                 <!-- row  5 -->
                 <li>
-                  <h1 style="text-align: center; padding-right: 11rem">2000</h1>
                   <div>
                     <div class="d-flex align-items-center justify-content-center">
                       <a href="song_5.html">
@@ -278,7 +286,6 @@
                 </li>
                 <!-- row 6 -->
                 <li>
-                  <h1 style="text-align: center; padding-left: 11rem">2000</h1>
                   <div>
                     <div class="d-flex align-items-center justify-content-center">
                       <a href="song_6.html">
@@ -306,7 +313,6 @@
                 </li>
                 <!-- row 7 -->
                 <li>
-                  <h1 style="text-align: center; padding-right: 11rem">2000</h1>
                   <div>
                     <div class="d-flex align-items-center justify-content-center">
                       <a href="song_7.html">
@@ -326,7 +332,6 @@
                 </li>
                 <!-- row 8 -->
                 <li>
-                  <h1 style="text-align: center; padding-left: 11rem">2021</h1>
                   <div>
                     <div class="d-flex align-items-center justify-content-center">
                       <a href="song_8.html">
@@ -360,7 +365,6 @@
                 </li>
                 <!-- row 9 -->
                 <li>
-                  <h1 style="text-align: center; padding-right: 11rem">2022</h1>
                   <div>
                     <div class="d-flex align-items-center justify-content-center">
                       <a href="song_10.html">
@@ -389,17 +393,17 @@
     <div class="d-flex pt-5 align-items-center justify-content-center text-center">
       <a
         role="button"
-        href="index.html"
+        href="agape.html"
         class="toleft"
         style="text-decoration: none">
-        <i class="icon-chevron-left"> &nbsp;回第五章</i>
+        <i class="icon-chevron-left"> &nbsp;回第四章</i>
       </a>
       <a
         role="button"
         href="index.html"
         class="toleft"
         style="text-decoration: none"
-        >&nbsp;下一節
+        >&nbsp;下一章
         <i class="icon-chevron-right"> </i>
       </a>
     </div>
